bynkc/tests/fixtures/positive/220_atomic_commons_suite/src/calc.bynk
commons calc {
  fn dbl(n: Int) -> Int { n + n }
}

suite calc {
  case "doubles" {
    expect dbl(3) == 6
  }
}
