bynkc/tests/fixtures/negative/92_tail_wrong_unwrapped_type/input.bynk
commons demo {
  fn bad(n: Int) -> Effect[Int] {
    "not an int"
  }
}
